[gd_scene load_steps=16 format=3 uid="uid://bcqf1gycu32mf"]

[ext_resource type="Script" path="res://objects/enemy/enemy.gd" id="1_2kard"]
[ext_resource type="Script" path="res://classes/objects/Hurtbox2D/Hurtbox2D.gd" id="2_r6qsg"]
[ext_resource type="Script" path="res://classes/objects/Stats/StatRangeInt.gd" id="2_tim7i"]
[ext_resource type="Texture2D" uid="uid://2jnq8gvfl8tt" path="res://assets/enemy/normal_zombie/zombie-death0.svg" id="4_5yweg"]
[ext_resource type="Texture2D" uid="uid://beuxya4hherlp" path="res://assets/enemy/normal_zombie/zombie-death1.svg" id="5_qwipu"]
[ext_resource type="Texture2D" uid="uid://cdues7k61bmlx" path="res://assets/enemy/normal_zombie/zombie-death2.svg" id="6_8erqe"]
[ext_resource type="Texture2D" uid="uid://c3h1abprn0l4a" path="res://assets/enemy/normal_zombie/zombie0-walk1.svg" id="7_vj1qx"]
[ext_resource type="Texture2D" uid="uid://becrkp1pw0evq" path="res://assets/enemy/normal_zombie/zombie0-walk2.svg" id="8_rw5k6"]
[ext_resource type="Script" path="res://classes/objects/ContextSteerer/ContextSteerer.gd" id="13_833qm"]
[ext_resource type="AudioStream" uid="uid://by8kehgwq2f4d" path="res://assets/enemy/hit_0.wav" id="14_d4lso"]
[ext_resource type="AudioStream" uid="uid://dn1qwi6rrj2v4" path="res://assets/enemy/hit_1.wav" id="15_h14bw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sgi7v"]
size = Vector2(8, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fc24u"]
size = Vector2(12, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_n4l1l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5yweg")
}, {
"duration": 1.0,
"texture": ExtResource("5_qwipu")
}, {
"duration": 1.0,
"texture": ExtResource("6_8erqe")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_vj1qx")
}, {
"duration": 1.0,
"texture": ExtResource("8_rw5k6")
}],
"loop": true,
"name": &"walk0",
"speed": 5.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_38vwa"]
playback_mode = 1
random_pitch = 1.2
streams_count = 2
stream_0/stream = ExtResource("14_d4lso")
stream_1/stream = ExtResource("15_h14bw")

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("health") groups=["enemies"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_2kard")
health = NodePath("Health")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_tim7i")
max_value = 3
value = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sgi7v")

[node name="HitDetector" type="Area2D" parent="." node_paths=PackedStringArray("root")]
collision_layer = 4
collision_mask = 0
script = ExtResource("2_r6qsg")
root = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector"]
shape = SubResource("RectangleShape2D_fc24u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5, 0)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_n4l1l")
animation = &"death"
frame = 2
frame_progress = 1.0

[node name="ContextSteerer" type="Node2D" parent="."]
script = ExtResource("13_833qm")
collision_mask = 4

[node name="SightDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightDetector"]
shape = SubResource("RectangleShape2D_fc24u")

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_38vwa")
volume_db = -5.0

[connection signal="value_lowered" from="Health" to="." method="_on_health_value_lowered"]
[connection signal="hurt" from="HitDetector" to="." method="_on_hit_detector_hurt"]
